# driveopsiq

./: .auditignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOYMENT_GUIDE.md  ai_audit.bat  ai_audit.sh  ai_revise.bat  ai_revise.sh  audit.py  audit_wrapper.sh  file_list.txt  full_stack_audit.py  package-lock.json  run_audit.sh  simple_audit.py  syfer_backend_audit.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml  security-audit.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  nohup.out  pyproject.toml  run.py  seed_user.py  syferstack.db-shm  syferstack.db-wal  syferstack.db.bak.1760295004  test_token.py
backend/alembic/: env.py
backend/app/: logging_config.py  main.py  production.py
backend/app/api/routes/: ai.py  auth.py  users.py
backend/app/core/: cache.py  config.py  database.py  logging.py  metrics.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  auth.py  user.py
backend/app/modules/driveops_iq/: __init__.py  models.py  router.py  schemas.py
backend/app/routers/: health.py
backend/app/schemas/: ai.py  auth.py  user.py
backend/app/services/: demo_seed.py
backend/db/init/: 01_init.sql
backend/monitoring/: alert.rules.yml  alertmanager.yml  prometheus.yml
backend/monitoring/grafana/dashboards/: syferstack-overview.json
backend/monitoring/grafana/provisioning/dashboards/: dashboards.yml
backend/monitoring/grafana/provisioning/datasources/: prometheus.yml
backend/nginx/: nginx.conf
backend/redis/: redis.conf
backend/tests/: __init__.py  conftest.py  test_app_coverage.py  test_driveops.py  test_main.py
docs/: AI_REVISION_OVERVIEW.md  owasp_guidelines.txt  readiness_prompt.txt  security_measures.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: analyze-bundle.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  Dashboard.tsx  DriveOpsLogin.tsx  ErrorBoundary.tsx  FieldManagerDashboard.jsx  Input.tsx  LoginScreen.tsx  ShopManagerDashboard.jsx  SplashScreen.tsx  index.ts
frontend/src/components/layouts/: ManagerLayout.d.ts  ManagerLayout.jsx  RootLayout.tsx
frontend/src/components/ui/: LoadingSpinner.tsx
frontend/src/modules/driveops_iq/: DriveOpsRequestForm.tsx  index.ts
frontend/src/pages/: Dashboard.tsx  NotFound.tsx  Unauthorized.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  SystemMetrics.tsx  UserManagement.tsx
frontend/src/pages/ai/: AIAnalytics.tsx  AIChat.tsx
frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  LoginScreen.tsx  Register.tsx
frontend/src/pages/cmr/: MobileCMRDashboard.tsx  ShopCMRDashboard.tsx
frontend/src/pages/docs/: APIDocumentation.tsx
frontend/src/pages/technician/: TechnicianDashboard.tsx
frontend/src/pages/user/: Profile.tsx  Settings.tsx
frontend/src/router/: ManagerRouter.d.ts  ManagerRouter.jsx  index.tsx
frontend/src/services/: api.ts  driveOps.ts  httpClient.ts
frontend/src/types/: index.ts
reports/: latest.json  production_audit.json  recommendations_merged.json  security_audit_20251011_001608.json  security_audit_20251011_001853.json  summary.html  summary.json  summary.md
scripts/: Dockerfile  README.md  audit_automation.py  audit_config.yaml  audit_cron.sh  audit_requirements.txt  audit_scheduler.py  backup_system.sh  cache_system.py  config_manager.py  container_registry.sh  db_performance_audit.py  docker-compose.yml  improved_audit.py  load_recommendations.py  local_audit.py  metrics_system.py  plugin_system.py  production_audit.py  prometheus.yml  rebuild_summary.py  requirements.txt  retry_system.py  test_audit_system.py
scripts/reports/: production_audit.json  summary.md
